still playing with it, but here's what I have before I have too much fun

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>My Resume</title>
+  <title>Preston's Resume</title>
 
   <link rel="stylesheet" href="css/index.css">
 
@@ -14,6 +14,69 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <div>
+    <nav>
+      <a href=#>Home</a>
+      <a href=#>About</a>
+      <a href=#>Portfolio</a>
+      <a href=#>Contact</a>
+    </nav>
+  </div>
+  <div class="intro">
+    <img class="image" src="images/laptop.jpeg">
+    <div class="introtext">
+    <h1>Preston Middleton - Web Dev</h1>
+      <p>A developer ready to own his career.</p>
+      <button>Contact</button>
+    </div>
+  </div>
+  <div class="middle">
+    <section class="skills">
+      <h2>Skills:</h2>
+      <list>
+        <li>Coding some neat sites</li>
+        <li>Napping anytime, anywhere</li>
+        <li>Eating twice his bodyweight</li>
+        <li>Petting all kinds of animals</li>
+      </list>
+    </section>
+    <section class="why">
+      <h3>Why hire him?</h3>
+      <p class="hire">If you don't want just another boring old workhorse, then you're in the right place. 
+        If you want someone who can make you a website using only an N64, look no further. 
+        Give him a task, some peanut butter, and a pat on the head and he'll get your job done
+        faster than you can change a diaper on a velociraptor.</p>
+    </section>
+  </div>
+  <div class="history">
+    <h2>Work History</h2>
+    <table>
+      <tr class="headrow">
+        <th>Yrs</th>
+        <th>Company</th>
+        <th>Title</th>
+        <th>Description</th>
+      </tr>
+      <tr class="row1">
+        <td>5</td>
+        <td class="color">Galactic Republic</td>
+        <td>Jedi's Tech Support</td>
+        <td class="color">Made Spacebook pages for the older masters</td>
+      </tr>
+      <tr class="row2">
+        <td class="color">1</td>
+        <td>Arby's</td>
+        <td class="color">Bear Tamer</td>
+        <td>Was supplied only a toaster and some Arby's sauce</td>
+      </tr>
+      <tr class="row3">
+        <td>23</td>
+        <td class="color">Future Me Inc</td>
+        <td>Me</td>
+        <td class="color">Pay kinda sucks. Could use a better career.</td>
+      </tr>
+    </table>
+  </div>
+  <footer>Future Me Inc &copy</footer>
 </body>
 </html>
